--- a/portal-bootstrap/src/main/resources/application.yaml
+++ b/portal-bootstrap/src/main/resources/application.yaml
@@ -6,24 +6,28 @@ spring:
     driver-class-name: org.mariadb.jdbc.Driver
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: none
     show-sql: true
     properties:
       hibernate:
         format_sql: true
 
-#db:
-#   host: YourDBHost
-#   port: 3306
-#   name: YourDBName
-#   username: YourDBUser
-#   password: YourDBPassword
+  # Flyway Configuration
+  flyway:
+    enabled: true
+    locations: classpath:db/migration
+    baseline-on-migrate: true
+    validate-on-migrate: true
+    out-of-order: false
+    baseline-version: 1
+    baseline-description: "Initial baseline"
+
 db:
    host: ${DB_HOST:localhost}
    port: ${DB_PORT:3306}
    name: ${DB_NAME:portal_db}
    username: ${DB_USERNAME:root}
-   password: ${DB_PASSWORD:}
+   password: ${DB_PASSWORD:12345678}
 
 # Encryptor
 encryption:
