--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,7 @@
         <flyway.version>10.15.0</flyway.version>
         <spring.ai.version>1.1.0-M4</spring.ai.version>
         <higressadminsdk.version>0.0.2</higressadminsdk.version>
-        <nacos.client.version>3.1.0</nacos.client.version>
+        <nacos.client.version>3.1.1</nacos.client.version>
         <spring.ai.version>1.1.0-M4</spring.ai.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
@@ -206,6 +206,12 @@
                     </configuration>
                 </plugin>
 
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>3.2.5</version>
+                </plugin>
+
                 <!-- Spotless Plugin for Code Formatting -->
                 <plugin>
                     <groupId>com.diffplug.spotless</groupId>
@@ -239,6 +245,11 @@
             <plugin>
                 <groupId>com.diffplug.spotless</groupId>
                 <artifactId>spotless-maven-plugin</artifactId>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
             </plugin>
         </plugins>
     </build>
